
	More accurate parsing of bar not surrounded with whitespace.

	Be consistent with regard to when local state is changed and do not reset
	neither local options nor local filter on entering/leaving custom view.
	Thanks to filterfalse.

	Disallow adding duplicated filetype/fileviewer entries (just ignore them
	as they wouldn't be used due to order priority anyway).

	Fixed redrawing message dialog when 'relativenumber' option is on.  Thanks
	to aleksejrs.

	Fixed resetting statusbar contents on displaying message dialog.

	Fixed parsing background mark after quote (as in `:put " &`).

	Fixed using plugin in neovim, which has broken `system()` and :! commands.
	Thanks to Artur Shaik (a.k.a. artur-shaik).

	Fixed polluting screen of server with messages about invalid arguments.

	Fixed duplicated filetype entries in vifminfo.  Thanks to aleksejrs.

	Fixed switching views via :wincmd.  Thanks to fogine.

	Fixed executing commands on new view after switching it (related to
	sequences of commands separated via bar symbol).

	Fixed --with-dyn-x11 configuration option, which failed to enable dynamic
	use of the library.  Thanks to Badalisc and Hendrik Jaeger (a.k.a. henk).

	Fixed handling of doubled commas on reading/writing filetypes from/to
	vifminfo.

0.8.1-beta to 0.8.1

	Added summary to builtin tree implementation.  Thanks to aleksejrs.

	Added more filetype definitions into sample vifmrc.  Thanks to aleksejrs.

	Added 'title' option to control whether title of terminal should be set.
	Enabled by default if old title can be restored.  Thanks to Svyatoslav
	Mishyn (a.k.a. juef).

	Case insensitive completion of autocommand name for :autocmd command.

	Allow /**/ in :autocmd pattern to match end of the path.  Thanks to
	aleksejrs.

	Don't trigger DirEnter on exiting custom-view (when we technically stay in
	the same directory).  Thanks to aleksejrs.

	Somewhat align options in conflict resolution dialog.  Patch by Svyatoslav
	Mishyn (a.k.a. juef).
